apps/web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cf
    kubernetes.io/ingress.class: ingress
  name: id
  namespace: hanzo
spec:
  rules:
  - host: hanzo.id
    http:
      paths:
      - backend:
          service:
            name: id
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: pars.id
    http:
      paths:
      - backend:
          service:
            name: id
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: lux.id
    http:
      paths:
      - backend:
          service:
            name: id
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hanzo.id
    secretName: hanzo-id-tls
  - hosts:
    - pars.id
    secretName: pars-id-tls
  - hosts:
    - lux.id
    secretName: lux-id-tls
